@@ -62,6 +62,7 @@ Version 1.5.0+svn:
    * Make it possible to change base and overlay separately in [terrain] and
     [terrain_mask] actions.
    * rename the "hides" status as "hidden"
+   * add a new image path function : GS to greyscale the image
  * wesnothd
    * added expiration time to bans
    * added restart command to server that does gracefull restart
